tests/fail/fail_uninitialized_variable.kl
fn inisiu() {
    dipoz nter x;
    mostra(x);
}
